# BiopolymersKG

./: .gitignore  README.md  data.dvc  environment.yml  main.py  protnlm.dvc  pyproject.toml  raw_data.dvc  results.dvc
graph_link_prediction_pbg/: .gitignore  README.md  conf.json  dvc.yaml  main.py  params.yaml  pyproject.toml
graph_link_prediction_pbg/.dvc/: config
graph_link_prediction_pbg/conf/: config.yaml
graph_link_prediction_pbg/conf/edge_paths/: partitioned.yaml
graph_link_prediction_pbg/conf/entities/: molecules.yaml
graph_link_prediction_pbg/conf/import_data/: default.yaml
graph_link_prediction_pbg/conf/relations/: has_similarity.yaml  (+1 more)
graph_link_prediction_pbg/inference/: comparator.py  config.py  evaluation.py  loaders.py  main.py  metrics.py  report.py  sampling.py  visualization.py
graph_link_prediction_pbg/pbg_configs/: import_from_tsv.py  train.py
graph_link_prediction_pbg/resources/: .gitignore
graph_link_prediction_pbg/sbatch_tasks/: operator_affine.sh  operator_complex_diagonal.sh  operator_diagonal.sh  operator_linear.sh  operator_translation.sh  run_dvc_queue.sh
graph_link_prediction_pbg/tasks/: awk_parse_metrics.sh  import_from_tsv.sh  parse_all_metrics.sh  train_and_eval.sh
graph_link_prediction_pykeen/: .gitignore  README.md  graph_alalysis.ipynb  prepare_data_iw_hs.py  pyproject.toml
graph_link_prediction_pykeen/download_data_from_neo4j/: download_data.py  run_download_and_save.py  save_data_to_csv.py
graph_link_prediction_pykeen/sbatch_tasks/: distmult.sh  rotate.sh
graph_link_prediction_pykeen/splitting/: split.py
(+114 files in other folders)
