[project]
name = "graph-link-prediction"
version = "0.1.0"
description = "Repository for experiments on graph link prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "torch>=2.8.0",
    "torchbiggraph",
    "dvc[s3]",
]

[tool.uv.sources]
torchbiggraph = { git = "https://github.com/facebookresearch/PyTorch-BigGraph.git" }
